fixed span-checkbox-overlapping  issue on smaller viewports for show subtask

--- a/styles/board.css
+++ b/styles/board.css
@@ -571,6 +571,14 @@ main {
         width: 90%;
     }
 
+    #dialaogBoardTask {
+        padding: 16px;
+    }
+
+    .page-container {
+        margin-right: 0;
+    }
+
 }
 
 
